--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@heroicons/react": "^2.0.15",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.13.0",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
