--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint . --ext .ts,.tsx,.js",
     "prepare": "husky install",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^12.19.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-watch": "^8.0.0",
+    "gh-pages": "^6.3.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
